# deezer-rs

./: Cargo.toml
deezer-rs-macros/: Cargo.toml
deezer-rs-macros/src/: attribute.rs  incomplete.rs  lib.rs  object.rs
src/: client.rs  error.rs  image.rs  lib.rs  list.rs  main.rs  objects.rs
src/objects/: album.rs  artist.rs  chart.rs  editorial.rs  episode.rs  genre.rs  infos.rs  options.rs  playlist.rs  podcast.rs  radio.rs  track.rs  traits.rs  user.rs
