[package]
name = "deezer-rs"
version = "0.1.0"
edition = "2024"

[workspace]
members = ["deezer-rs-macros"]

[dependencies]
deezer_rs_macros = { path = "deezer-rs-macros" }
reqwest = { version = "0.12.24", features = ["json"] }
serde = "1.0.228"
serde_json = "1.0.145"
serde_repr = "0.1.20"
thiserror = "2.0.17"
tokio = { version = "1.48.0", features = ["full"] }

[dev-dependencies]
